crates/musa-language/tests/suite/snapshots/suite__parser__invention_parses_cleanly.snap
---
source: crates/musa-language/tests/parser.rs
expression: print_tree(&doc.syntax())
---
Root@0..272
  PieceDecl@0..271
    PieceKw@0..5 "piece"
    Whitespace@5..6 " "
    String@6..24 "\"Little Invention\""
    Whitespace@24..25 " "
    LBrace@25..26 "{"
    TempoStmt@26..50
      Whitespace@26..31 "\n    "
      TempoKw@31..36 "tempo"
      Whitespace@36..37 " "
      Identifier@37..44 "quarter"
      Whitespace@44..45 " "
      Equals@45..46 "="
      Whitespace@46..47 " "
      Integer@47..49 "96"
      Semicolon@49..50 ";"
    MeterStmt@50..65
      Whitespace@50..55 "\n    "
      MeterKw@55..60 "meter"
      Whitespace@60..61 " "
      Rational@61..64 "4/4"
      Semicolon@64..65 ";"
    KeyStmt@65..82
      Whitespace@65..70 "\n    "
      KeyKw@70..73 "key"
      PitchClass@73..75
        Whitespace@73..74 " "
        Identifier@74..75 "c"
      Whitespace@75..76 " "
      Identifier@76..81 "major"
      Semicolon@81..82 ";"
    ScoreDecl@82..269
      Whitespace@82..88 "\n\n    "
      ScoreKw@88..93 "score"
      Whitespace@93..94 " "
      LBrace@94..95 "{"
      PartDecl@95..263
        Whitespace@95..104 "\n        "
        PartKw@104..108 "part"
        Whitespace@108..109 " "
        Identifier@109..114 "piano"
        Whitespace@114..115 " "
        LBrace@115..116 "{"
        ClefStmt@116..141
          Whitespace@116..129 "\n            "
          ClefKw@129..133 "clef"
          Whitespace@133..134 " "
          Identifier@134..140 "treble"
          Semicolon@140..141 ";"
        VoiceDecl@141..253
          Whitespace@141..155 "\n\n            "
          VoiceKw@155..160 "voice"
          Whitespace@160..161 " "
          Identifier@161..166 "right"
          Whitespace@166..167 " "
          LBrace@167..168 "{"
          Whitespace@168..185 "\n                "
          BarStmt@185..206
            Pipe@185..186 "|"
            NoteStmt@186..191
              Whitespace@186..187 " "
              PitchLiteral@187..189 "c4"
              Duration@189..191
                Slash@189..190 "/"
                Integer@190..191 "4"
            NoteStmt@191..196
              Whitespace@191..192 " "
              PitchLiteral@192..194 "d4"
              Duration@194..196
                Slash@194..195 "/"
                Integer@195..196 "4"
            NoteStmt@196..201
              Whitespace@196..197 " "
              PitchLiteral@197..199 "e4"
              Duration@199..201
                Slash@199..200 "/"
                Integer@200..201 "4"
            NoteStmt@201..206
              Whitespace@201..202 " "
              PitchLiteral@202..204 "f4"
              Duration@204..206
                Slash@204..205 "/"
                Integer@205..206 "4"
          Whitespace@206..223 "\n                "
          BarStmt@223..239
            Pipe@223..224 "|"
            NoteStmt@224..229
              Whitespace@224..225 " "
              PitchLiteral@225..227 "g4"
              Duration@227..229
                Slash@227..228 "/"
                Integer@228..229 "2"
            NoteStmt@229..234
              Whitespace@229..230 " "
              PitchLiteral@230..232 "a4"
              Duration@232..234
                Slash@232..233 "/"
                Integer@233..234 "4"
            NoteStmt@234..239
              Whitespace@234..235 " "
              PitchLiteral@235..237 "b4"
              Duration@237..239
                Slash@237..238 "/"
                Integer@238..239 "4"
          Whitespace@239..252 "\n            "
          RBrace@252..253 "}"
        Whitespace@253..262 "\n        "
        RBrace@262..263 "}"
      Whitespace@263..268 "\n    "
      RBrace@268..269 "}"
    Whitespace@269..270 "\n"
    RBrace@270..271 "}"
  Whitespace@271..272 "\n"
