crates/musa-language/tests/suite/snapshots/suite__parser__lex_error_token_recovers_and_continues.snap
---
source: crates/musa-language/tests/parser.rs
expression: print_errors(&doc)
---
82..83: musa does not read this
  label: not part of the language
  help: check for a stray character, or a word from another notation
