crates/musa-language/tests/suite/snapshots/suite__parser__the_old_type_spellings_are_migration_errors.snap
---
source: crates/musa-language/tests/suite/parser.rs
expression: print_errors(&doc)
---
27..32: a type is spelled with a capital
  label: this is `EventTrack<WrittenTime>`
  help: every type the compiler owns is spelled with a capital, so `music` is `EventTrack<WrittenTime>`
  fix: write `EventTrack<WrittenTime>` -> "EventTrack<WrittenTime>"
64..74: a type is spelled with a capital
  label: this is `NoteName`
  help: `pitchclass` is `NoteName`: a pitch class forgets spelling, and this is the type that keeps it, so C♯ and D♭ are two things here and one `Pc12`
  fix: write `NoteName` -> "NoteName"
98..104: a type is spelled with a capital
  label: this is `Option`
  help: every type the compiler owns is spelled with a capital, so `option` is `Option`
  fix: write `Option` -> "Option"
105..112: a type is spelled with a capital
  label: this is `Voicing`
  help: every type the compiler owns is spelled with a capital, so `voicing` is `Voicing`
  fix: write `Voicing` -> "Voicing"
104..113: a type parameter is angle-bracketed
  label: this is `<…>`
  help: `[` means a list here — the literal `[c4, d4]` and the pattern `[x, ..xs]` — so the type layer takes `<` and `>` and the character reads one way
  fix: write `<…>` -> "<voicing>"
116..120: a constructor is spelled with a capital
  label: this is `None`
  help: `Some` and `None` are the two constructors of `Option`, and they are spelled the way it is
  fix: write `None` -> "None"
